src/test/resources/org/nest/nestml/_cocos/invalid/vectorVariableInNonVectorDeclaration.nestml
component AliasInDecl:
  parameters:
    n  integer
    alias three integer[n] = 3 # should be an error?
    threePlusFour integer = three + 4
  end

  function set_three(v integer):

  end
end
